CloudFormation/PowerBI CloudFormation/CloudFormation.yaml
#Deploying Resources
#https://docs.aws.amazon.com/whitepapers/latest/using-power-bi-with-aws-cloud/using-power-bi-with-aws-cloud.pdf
Description: PowerBI Cloud Formation

## Might be required later on for ingress between
Add-VpnConnectionRoute
#      SourceSecurityGroupId:
#        Fn::GetAtt:
#          - SourceSG
#          - GroupId

Resources:

#Deploying Security Group
  PowerBiSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG for PowerBI Gateway
      GroupName: PowerBI
      VpcId: !Ref PowerBiVPC
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
      IpProtocol: [tcp|udp|ip]
      FromPort: '1433'
      ToPort: '1433'

      

#Deploying VPC
  PowerBiVPC:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags: 
        - Key: Name 
          Value: PowerBI Gateway

#Deploying Subnet
  PowerBiPublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref PowerBiVPC
      AvailabilityZone: "ap-southeast-2b"
      CidrBlock: 10.0.0.0/24
      Tags:
      - Key: Name
        Value: PowerBiGateway

#Deploying EC2 Instance
  PowerBIInstance:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-0300dc03c13eb7660
      InstanceType: t2.micro
      KeyName: Grafana3.0
      Monitoring: true
      PropagateTagsToVolumeOnCreation: 'true'
      SecurityGroupIds: 
      - !GetAtt "PowerBiSG.GroupId"
      SubnetId: !Ref PowerBiPublicSubnetA
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp2
            VolumeSize: '10'
            DeleteOnTermination: 'false'
            Encrypted: 'false'

#Deploying Elastic IP
  PowerBiEIP:
    Type: AWS::EC2::EIP
    Properties: 
      Tags: 
        - Key: Name
          Value: PowerBIEIP


#Deploying Internet Gateway
  PowerBiInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: PowerBi
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref PowerBiVPC
      InternetGatewayId: !Ref PowerBiInternetGateway
      
## OPTIONAL - Can Deploy a Nat Gateway to prevent internet inbound traffic, however costs additional
#Deploying Nat Gateway
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt "PowerBiEIP.AllocationId"
      ConnectivityType: public
      SubnetId: !Ref PowerBiPublicSubnetA
      Tags: 
      - Key: Name 
        Value: PowerBiNatGateway


#Creating Route Table
  PowerBiRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: PowerBiVPC
      Tags:
        - Key: Name
          Value: PowerBi

#Creating Internet Route
  PowerBiRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PowerBiRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref PowerBiInternetGateway

#Creating Gateway Subnet Association
    PowerBiSubnetARouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref PowerBiRouteTable # Required
        SubnetId: !Ref PowerBiPublicSubnetA
